--- a/style.css
+++ b/style.css
@@ -1,4 +1,56 @@
-.body {
+@import url("https://use.typekit.net/irm5ixk.css");
 
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+html{
+    font-family: Campaign;
+    font-size: 12px;
+}
+section{
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 100px 0;
+    background-color: whitesmoke;
+}
+
+.container{
+    width: 90%;
+    height: auto;
+    max-width: 1200px;
     margin: 0 auto;
+}
+
+.main-title{
+    text-align: center;
+    font-size: 4rem;
+    color: #f15f6a;
+    margin-bottom: 30px;
+}
+
+form{
+    width: 90%;
+    max-width: 400px;
+    margin: 20px auto;
+}
+
+form input{
+    width: 100%;
+    padding: 10px;
+    border-color: #f15f6a;
+    border-radius: 4px;
+    font-size: 2rem;
+    display: inline-block;
 }
