--- a/style.css
+++ b/style.css
@@ -86,3 +86,35 @@ button {
     height: 300px;
     border-radius: 4px;
 }
+
+.item .flex-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.item .title{
+    color: black;
+    margin: 20px 10px 0 0;
+    font-weight: 500;
+}
+
+.view-recipe{
+    text-decoration: none;
+    text-align: center;
+    width: 130px;
+    padding: 10px 0;
+    background-color: #f15f6a;
+    color: rgb(255, 255, 255);
+    border-radius: 4px;
+    font-size: 1rem;
+    margin-top: 20px;
+    align-self: flex-start;
+}
+.item-data{
+    color: #f15f6a;
+    display: block;
+    margin: 10px;
+    font-size: 1rem;
+    letter-spacing: .05rem;
+    line-height: 2rem;
+}
