--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@ html{
     font-family: "Campaign";
     font-size: 12px;
 }
+nav{
+    background-color: #f15f6a;
+    padding: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    color: rgb(246, 243, 227);
+    font-size: 2rem;
+    padding: 20px, 30px ;
+}
 section{
     min-height: 100vh;
     width: 100%;
